@@ -1,12 +1,10 @@
 package com.sequenceiq.cloudbreak.cloud.openstack.nativ.network;
 
-import java.util.Collections;
 import java.util.List;
 import java.util.Map;
 
 import javax.inject.Inject;
 
-import com.google.common.collect.Maps;
 import com.sequenceiq.cloudbreak.cloud.context.AuthenticatedContext;
 import com.sequenceiq.cloudbreak.cloud.model.CloudResource;
 import com.sequenceiq.cloudbreak.cloud.model.CloudResourceStatus;
@@ -23,11 +21,7 @@ public abstract class AbstractOpenStackNetworkResourceBuilder extends AbstractOp
     private static final Map<Class<? extends AbstractOpenStackNetworkResourceBuilder>, Integer> ORDER;
 
     static {
-        Map<Class<? extends AbstractOpenStackNetworkResourceBuilder>, Integer> map = Maps.newHashMap();
-        map.put(OpenStackNetworkResourceBuilder.class, 0);
-        map.put(OpenStackSubnetResourceBuilder.class, 1);
-        map.put(OpenStackRouterResourceBuilder.class, 2);
-        ORDER = Collections.unmodifiableMap(map);
+        ORDER = Map.of(OpenStackNetworkResourceBuilder.class, 0, OpenStackSubnetResourceBuilder.class, 1, OpenStackRouterResourceBuilder.class, 2);
     }
 
     @Inject
